--- a/about.html
+++ b/about.html
@@ -1,72 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pearl the Robot's Programmer Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-   
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css">
-
-    <link rel="stylesheet" href="css/aboutstyle.css"> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pearl the Robot's Programmer Portfolio</title>
+  
+  <!-- Fonts and CSS -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css">
+  <link rel="stylesheet" href="css/aboutstyle.css"> 
 </head>
 <body>
 
+<!-- Inject Hotdog Menu -->
+<div class="menu-container" id="menuContainer">
+  <button class="hotdog-button" id="menuToggle">
+    <div class="hotdog-stack">
+      <img src="images/menu/images/backbun.png" class="layer back" alt="Back Bun">
+      <img src="images/menu/images/Meat.png" class="layer meat" alt="Meat">
+      <img src="images/menu/images/frontbun.png" class="layer front" alt="Front Bun">
+    </div>
+  </button>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="index.html" class="mustard">🌭 Mustard - Home</a>
+    <a href="about.html" class="relish">🥒 Relish - About</a>
+    <a href="blog.html" class="onion">🧅 Onion - Blog</a>
+    <a href="portfolio.html" class="pickle">🥬 Pickle - Portfolio</a>
+    <a href="contact.html" class="tomato">🍅 Tomato - Contact</a>
+    <a href="store.html" class="pepper">🌶️ Pepper - Store</a>
+    <a href="HAWTDOG/index.html" class="celery">🌿 Celery Salt - HawtDawg</a>
+  </div>
+</div>
+
+<script>
+  const toggleBtn = document.getElementById("menuToggle");
+  const dropdown = document.getElementById("dropdownMenu");
+  const container = document.getElementById("menuContainer");
+
+  toggleBtn.addEventListener("click", () => {
+    const isOpen = dropdown.style.display === "block";
+    dropdown.style.display = isOpen ? "none" : "block";
+    toggleBtn.classList.toggle("clicked", !isOpen);
+  });
+
+  document.addEventListener("click", (e) => {
+    if (!container.contains(e.target)) {
+      dropdown.style.display = "none";
+      toggleBtn.classList.remove("clicked");
+    }
+  });
+</script>
+
+
+<!-- Site Navigation -->
 <header class="site-header">
-    <nav>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="https://github.com/CodeByPerla">Code</a>
-     <a href="https://www.youtube.com/channel/UCfqqhh1Ad5D32W15ea37iMg">Videos</a>
-    </nav>
+  <nav>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="https://github.com/CodeByPerla">Code</a>
+    <a href="https://www.youtube.com/channel/UCfqqhh1Ad5D32W15ea37iMg">Videos</a>
+  </nav>
 </header>
 
 <main>
-    <section class="hero" data-aos="fade-up">
-        <img src="images/About/staringintothebeast.webp" alt="Gothic Artistry Hero Image" loading="lazy">
-        <h1>Exploring the Depths of Art & Code</h1>
-        <p>Welcome to the digital dominion of PearlTheRobot, where gothic aesthetics intertwine with the intricacies of programming.</p>
-    </section>
+  <section class="hero" data-aos="fade-up">
+    <img src="images/About/staringintothebeast.webp" alt="Gothic Artistry Hero Image" loading="lazy">
+    <h1>Exploring the Depths of Art & Code</h1>
+    <p>Welcome to the digital dominion of PearlTheRobot, where gothic aesthetics intertwine with the intricacies of programming.</p>
+  </section>
 
-<section class="portfolio-highlights">
-    <!-- Art section linked to a CodePen portfolio -->
+  <section class="portfolio-highlights">
     <a href="portfolio.html" class="portfolio-item-link">
-        <article class="portfolio-item" data-aos="fade-right">
-            <h2>Art</h2>
-            <p>Embark on an artistic safari in my digital jungle, where sketches grow wild, AI art occasionally achieves self-awareness, and posters boldly declare, 'I exist, therefore I art.'</p>
-        </article>
+      <article class="portfolio-item" data-aos="fade-right">
+        <h2>Art</h2>
+        <p>Embark on an artistic safari in my digital jungle, where sketches grow wild, AI art occasionally achieves self-awareness, and posters boldly declare, 'I exist, therefore I art.'</p>
+      </article>
     </a>
 
-    <!-- Programming Projects section linked to a GitHub page -->
     <a href="https://github.com/PearlTheRobot" class="portfolio-item-link">
-        <article class="portfolio-item" data-aos="fade-up">
-            <h2>Programming Projects</h2>
-            <p>Welcome to the labyrinth of my coding adventures, where AI prompts are cheekier than a British sitcom, and my GitHub projects serve as monuments to my caffeine addiction.</p>
-        </article>
+      <article class="portfolio-item" data-aos="fade-up">
+        <h2>Programming Projects</h2>
+        <p>Welcome to the labyrinth of my coding adventures, where AI prompts are cheekier than a British sitcom, and my GitHub projects serve as monuments to my caffeine addiction.</p>
+      </article>
     </a>
 
-    <!-- Videos section linked to a YouTube channel -->
     <a href="https://www.youtube.com/channel/UC15GCkefOPWiaWEC20m3dDA" class="youtubechannellink">
-        <article class="portfolio-item" data-aos="fade-left">
-            <h2>Videos</h2>
-            <p>Strap in for a cinematic odyssey in my video vault, featuring comedy sketches that aim for the stars but occasionally hit the neighbor's dog, and tech tutorials where I'm half magician, half mad scientist.</p>
-        </article>
+      <article class="portfolio-item" data-aos="fade-left">
+        <h2>Videos</h2>
+        <p>Strap in for a cinematic odyssey in my video vault, featuring comedy sketches that aim for the stars but occasionally hit the neighbor's dog, and tech tutorials where I'm half magician, half mad scientist.</p>
+      </article>
     </a>
-</section>
-
+  </section>
 </main>
 
 <footer class="site-footer">
-    <p>&copy; <span class="current-year"></span> PearlTheRobot. All rights enshrouded in mystery.</p>
+  <p>&copy; <span class="current-year"></span> PearlTheRobot. All rights enshrouded in mystery.</p>
 </footer>
 
-<!-- AOS animation library JS -->
+<!-- AOS and Custom JS -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init(); // Initialize AOS
-</script>
-<!-- Your custom JavaScript file -->
+<script>AOS.init();</script>
 <script src="script.js"></script>
 </body>
 </html>
