update about me section with new personal description and artistic focus

--- a/index.html
+++ b/index.html
@@ -218,7 +218,15 @@
     <div class="content">
       <h2>About Me</h2>
       <img src="images/profilepictureofself.png" alt="Artist Profile">
-      <p>Greetings! I am an artist who has been passionately creating art since the age of 13. Art isn't just a desire for me; it's an irresistible impulse that I must act upon. I generate so much material that people often wonder if I'm a robot or a human - what can I say, I'm just an art-producing machine! I speak multiple languages, both computer and human, which means I can code a website and converse with you about it in the same breath. Some say I'm a little unhinged, but hey, it's all part of the creative process, right? As I mature, I discover more and more human aspects of myself, such as my emotional sensitivity, which I channel into my art - just like Fiona Apple. I also possess the same level of pensiveness as David Foster Wallace, but without the footnotes. My mind takes my body hostage, driving me to push the boundaries of my creativity - I'm unstoppable! And as a morally-minded vegetarian, I'm always thinking about the impact of my actions on the world. When I'm not creating art, you can find me delving into artificial intelligence, science, computers, and other wacky and wonderful subjects. So, let's create something amazing together!</p>
+      <p>Hello and welcome to my webpage. Everythings custom. I just wanted to make a website that reminded me of the internet before squarespace and templating. I havent taught myself to use
+        wrappers to tell you the truth and write code from scratch Ill get to that eventually but things keep changing and between work and work I dont have much time. Currently Im focusing on 
+        putting togeather all of the things I can do in one place so people can see it. I am a visual artist, optimisation specialist, and a creative coder based in Chicago, IL. I have a passion for creating unique and engaging digital experiences that blend art and technology.</p>
+      <p>With a background in visual arts and a keen interest in programming, I strive to push the boundaries of creativity through my work. My projects often explore the intersection of art and technology, resulting in innovative and thought-provoking pieces.</p>
+      <p>My journey as an artist has been shaped by my experiences and the diverse influences that surround me. I believe in the power of art to inspire, provoke thought, and connect people across different cultures and backgrounds.</p>
+      <p>As an optimisation specialist, I am dedicated to improving processes and enhancing user experiences. I enjoy finding creative solutions to complex problems and leveraging technology to achieve optimal results.</p>
+      <p>Whether it's through visual art, coding, or optimisation, I am committed to creating meaningful and impactful work that resonates with audiences. I invite you to explore my portfolio and join me on this creative journey.</p>
+      <p>Thank you for visiting my website. I hope you find inspiration and enjoyment in my work. If you have any questions or would like to collaborate, feel free to reach out.</p>
+      </p>
       <p>In my free time, I enjoy music art and all thing tech. I also love to read and get inspiration for my work from different cultures and experiences.</p>
     </div>
   </section>
